<resources>
    <string name="app_name">Hotel System</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">or</string>
    <string name="welcome">Welcome to Hotel Management System. All rights reserved.</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_message">Create an account or sign up to access all the services.</string>
    <string name="dialog_message_sign_in_failed">Unable to sign in. Please try again later.</string>
    <string name="dialog_title_sign_in_failed">Sign In Failed!</string>
    <string name="dialog_title_choose_role">Choose a role</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_successful">Account created successfully</string>

    <string-array name="roles">
        <item>Waiter</item>
        <item>Cook</item>
        <item>Cashier</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="users">Users</string>
    <string name="tables">Tables</string>
    <string name="orders">Orders</string>
    <string name="meals">Meals</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_items">No items</string>
    <string name="dialog_title_add_meal">Create Meal</string>
    <string name="hint_meal_name">Meal Name</string>
    <string name="hint_meal_price">Price</string>
    <string name="meal_type">Meal Type</string>
    <string name="save">Save</string>
    <string name="dialog_message_add_meal">Meal successfully created.</string>
    <string name="dialog_title_logged_out">Logged out</string>
    <string name="dialog_message_logged_out">You have been logged out. Sigin in again to proceed.</string>
    <string name="dialog_title_add_table">Add Table</string>
    <string name="hint_table_name">Table Name</string>
    <string name="choose_table">Choose Table</string>
    <string name="choose_meal">Choose Meal</string>
    <string name="order_summary">Order Summary</string>
    <string name="make_order">Make Order</string>
</resources>
