<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:checked="true"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/restaurant_menu"
            android:title="@string/meals" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/tables"
            android:title="@string/tables" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/users"
            android:title="@string/users" />
    </group>

    <!--<item android:title="Manage">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Make Order" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
